--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<lombok.version>1.14.8</lombok.version>
 		<log4jdbc.log4j2.version>1.16</log4jdbc.log4j2.version>
 		<rest.assured.version>2.3.3</rest.assured.version>
+		<spring.version>4.2.2.RELEASE</spring.version>
 	</properties>
 
 	<dependencies>
